[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ball.gd" type="Script" id=1]
[ext_resource path="res://Img/ball.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.6643, 35.3361 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38.5448, 39.5806 )

[node name="ball" type="KinematicBody2D" groups=[
"ball",
]]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="ball" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource( 3 )

[node name="endTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="ball" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="ball" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="endTimer" to="." method="_on_endTimer_timeout"]
